# EU-Test-Data-Generator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  node-ci.yml  node-publish.yml  publish.yml  python-ci.yml  python-publish.yml  release.yml
benchmarks/: bench_ibantools.js  bench_idsmith.rs  bench_startup.py  bench_stdnum.py
bindings/node/: Cargo.toml  package-lock.json  package.json
bindings/node/__test__/: index.spec.mjs
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_idsmith.py
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  installation.md  introduction.md
docs/src/modules/: bank-account.md  company-id.md  credit-card.md  iban.md  personal-id.md  swift.md
docs/src/node/: api-reference.md  quick-start.md
docs/src/python/: api-reference.md  quick-start.md
scripts/: validate_npm.js  validate_stdnum.py
src/: csv.rs  lib.rs  main.rs
src/bank_account/: br.rs  iban_based.rs  mod.rs  mx.rs  nz.rs
src/company_id/: generic.rs  mod.rs
src/credit_card/: mod.rs
src/iban/: mod.rs
src/personal_id/: ar.rs  at.rs  au.rs  be.rs  bg.rs  br.rs  ca.rs  ch.rs  cl.rs  cn.rs  co.rs  cz.rs  de.rs  dk.rs  ec.rs  ee.rs  eg.rs  es.rs  fi.rs  fr.rs  gb.rs  generic.rs  gr.rs  hk.rs  hr.rs  id_.rs  ie.rs  il.rs  in_.rs  is_.rs  it.rs  jmbg.rs  jp.rs  kr.rs  lv.rs  mod.rs  mx.rs  my.rs  nl.rs  no.rs  (+13 more)
src/swift/: mod.rs
tests/: company_id_tests.rs  credit_card_tests.rs  personal_id_tests.rs  swift_tests.rs
(+5 files in other folders)
