[package]
name = "idsmith"
version = "0.4.0"
edition = "2021"
authors = ["Tony Benoy <me@tonybenoy.com>"]
description = "Validate and generate checksum-correct IBANs, personal IDs, bank accounts, credit cards, SWIFT/BIC, and company IDs for 252 countries."
license = "MIT"
keywords = ["validator", "iban", "validation", "personal-id", "test-data", "generator"]
categories = ["command-line-utilities", "development-tools::testing"]
repository = "https://github.com/Sunyata-OU/idsmith"

[lib]
name = "idsmith"
path = "src/lib.rs"

[[bin]]
name = "idsmith"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[features]
default = ["cli"]
cli = ["clap", "csv", "json"]
csv = []
json = ["serde", "serde_json"]